AP-23812: major refactoring of ExplorerMountTable
... too much to mention. in essence, moving the ground truth of the mount table
into org.knime.core.workbench@knime-core and making all extensions relying on
the old mount table (AbstractContentProvider etc) to be an adapter of the mount
points centrally defined in core.

AP-23812 (Move MountTable to new org.knime.core.workbench plug-in (retire
workbench code))